# multimodal-vs-unimodal

./: LICENSE  Makefile  README.md  pyproject.toml
data/: table1.csv
lib/prism/: __init__.py  boxplot.py  prismadiagram.py  scatterplot_perf_comparison.py
lib/prism/preprocessing/: preprocessing.py
lib/prism/utils/: utils.py
lib/prism/visualization/: visualization.py
scripts/: generate_performance_plot.py  generate_prisma.py  generate_sample_size_plot.py
