[tool.poetry]
name = "sysreview-multimodality-draft"
version = "0.1.0"
description = "Data exploration and visualization for system review"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "figure1", from = "."}, {include = "figure3", from = "."}, {include = "figure4", from = "."}]

[tool.poetry.dependencies]
python = "^3.11.6"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
seaborn = "^0.13.0"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 